Add first version of get\id
